fixing cmbt calculator on small screens

--- a/src/app/shared/cp2020/cp2020weapons/cp2020weapon-calculator/cp2020weapon-calculator.component.css
+++ b/src/app/shared/cp2020/cp2020weapons/cp2020weapon-calculator/cp2020weapon-calculator.component.css
@@ -1,5 +1,5 @@
 .cmbt-modifiers {
-  font-size: 11px;
+  font-size: 14px;
 }
 
 .cmbt-section {
